实现轻量 ReID：仅在匹配冲突时启用特征约束，减少 ID 抖动；补充 ID 切换统计写入 stats.json 运行稳定性提升：Session 停止加入软/硬两阶段与耗时记录，强制释放摄像头/音频 预览与缩略图优化：预览保持宽高比，缩略图在同一流水线生成，刷新频率随预览帧率联动 Web 服务优化：空闲自动降频；事件队列支持 frame_data 合并与统计 语言一致性：session_config.json 持久化语言/模式；ASR/转录/总结写入语言标记 配置集中：新增 config.py 统一解析 web/session/lite 配置 Lite UI：中英切换、日夜模式、报告标签与缩略图展示完善 新增/更新单测：覆盖语言解析、session meta 合并、缩略图刷新逻辑等 如果要，我可以直接给你一个简短的 commit message。

--- a/web/i18n/en.json
+++ b/web/i18n/en.json
@@ -331,5 +331,52 @@
   "（未生成）": "(Not generated)",
   "（点击“拉取模型”）": "(Click “Fetch Models”)",
   "，处理中…": ", processing…",
-  "，正在为其生成报告…": ", generating report…"
+  "，正在为其生成报告…": ", generating report…",
+  "Audio": "Audio",
+  "Awake": "Awake",
+  "Class language": "Class language",
+  "Detected Faces": "Detected Faces",
+  "Done": "Done",
+  "Drowsy": "Drowsy",
+  "Drowsy + down": "Drowsy + down",
+  "Error": "Error",
+  "Focus Monitor Lite": "Focus Monitor Lite",
+  "Head down": "Head down",
+  "ID {id}": "ID {id}",
+  "Last change: {age}": "Last change: {age}",
+  "Lesson Summary": "Lesson Summary",
+  "Low-resource status view (no video preview)": "Low-resource status view (no video preview)",
+  "No report running.": "No report running.",
+  "No session_id available. Start and stop a session first.": "No session_id available. Start and stop a session first.",
+  "No updates yet": "No updates yet",
+  "Processing: {status}": "Processing: {status}",
+  "Report": "Report",
+  "Report error: {error}": "Report error: {error}",
+  "Report failed: {error}": "Report failed: {error}",
+  "Report ready": "Report ready",
+  "Report ready (uploaded)": "Report ready (uploaded)",
+  "Report timeout. Try again later.": "Report timeout. Try again later.",
+  "Running": "Running",
+  "Stats": "Stats",
+  "Submitting job...": "Submitting job...",
+  "Transcript": "Transcript",
+  "Unknown": "Unknown",
+  "Unknown error": "Unknown error",
+  "Updated {age}": "Updated {age}",
+  "Uploading report...": "Uploading report...",
+  "Upload failed: {error}": "Upload failed: {error}",
+  "Video": "Video",
+  "just now": "just now",
+  "process start failed": "process start failed",
+  "start failed": "start failed",
+  "stop failed": "stop failed",
+  "upload failed": "upload failed",
+  "Status error: {error}": "Status error: {error}",
+  "Start failed: {error}": "Start failed: {error}",
+  "Stop failed: {error}": "Stop failed: {error}",
+  "Timeout": "Timeout",
+  "{sec}s ago": "{sec}s ago",
+  "{min}m {sec}s ago": "{min}m {sec}s ago"
 }
+  "课堂语言": "Class language",
+  "Idle": "Idle",
