--- a/web/i18n/zh.json
+++ b/web/i18n/zh.json
@@ -331,5 +331,52 @@
   "（未生成）": "（未生成）",
   "（点击“拉取模型”）": "（点击“拉取模型”）",
   "，处理中…": "，处理中…",
-  "，正在为其生成报告…": "，正在为其生成报告…"
+  "，正在为其生成报告…": "，正在为其生成报告…",
+  "Audio": "音频",
+  "Awake": "清醒",
+  "Class language": "课堂语言",
+  "Detected Faces": "检测到的人脸",
+  "Done": "完成",
+  "Drowsy": "瞌睡",
+  "Drowsy + down": "瞌睡+低头",
+  "Error": "错误",
+  "Focus Monitor Lite": "专注监控 Lite",
+  "Head down": "低头",
+  "ID {id}": "ID {id}",
+  "Last change: {age}": "上次变化：{age}",
+  "Lesson Summary": "课程总结",
+  "Low-resource status view (no video preview)": "轻量状态视图（无视频预览）",
+  "No report running.": "暂无报告运行。",
+  "No session_id available. Start and stop a session first.": "没有可用的 session_id（请先开始并停止一次录制）。",
+  "No updates yet": "暂无更新",
+  "Processing: {status}": "处理中：{status}",
+  "Report": "报告",
+  "Report error: {error}": "报告错误：{error}",
+  "Report failed: {error}": "报告失败：{error}",
+  "Report ready": "报告就绪",
+  "Report ready (uploaded)": "报告就绪（已上传）",
+  "Report timeout. Try again later.": "报告超时，请稍后重试。",
+  "Running": "进行中",
+  "Stats": "统计",
+  "Submitting job...": "提交任务中…",
+  "Transcript": "转录",
+  "Unknown": "未知",
+  "Unknown error": "未知错误",
+  "Updated {age}": "{age} 更新",
+  "Uploading report...": "正在上传报告…",
+  "Upload failed: {error}": "上传失败：{error}",
+  "Video": "视频",
+  "just now": "刚刚",
+  "process start failed": "任务启动失败",
+  "start failed": "开始失败",
+  "stop failed": "停止失败",
+  "upload failed": "上传失败",
+  "Status error: {error}": "状态错误：{error}",
+  "Start failed: {error}": "开始失败：{error}",
+  "Stop failed: {error}": "停止失败：{error}",
+  "Timeout": "超时",
+  "{sec}s ago": "{sec}秒前",
+  "{min}m {sec}s ago": "{min}分 {sec}秒前"
 }
+  "课堂语言": "课堂语言",
+  "Idle": "空闲",
